--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -31,7 +31,7 @@
             </div>
             <div class="container-contact100-btn">
                 <button onclick="window.location.href='/student'" class="contact100-form-btn">
-                    Student
+                    Teacher
                 </button>
                 <button onclick="window.location.href='/indus'" class="contact100-form-btn">
                     Industrial
